results/archive/b60/compile_winograd_output_se_relu_input_kernel.dp_20260308_084012.log
Exit code: 1
Compiler flags: -fsycl -O2 -std=c++17 -fsycl-unnamed-lambda -sycl-std=2020 -fhonor-nans -fhonor-infinities -fno-associative-math -fno-approx-func -no-ftz -fsycl-targets=spir64_gen,spir64
AOT Targets: pvc,bmg,dg2,arl-h,mtl-h,lnl-m,ptl-h,ptl-u
=== STDOUT ===
=== SYCL Compilation for Intel XPU (BMG Support) ===
Timestamp: 20260308_084012
Kernel: winograd_output_se_relu_input_kernel.dp
Source: /workspace/kernel_dataset/sycl/winograd_output_se_relu_input_kernel.dp.cpp
Compiler: icpx
Compile Flags: -fsycl -O2 -std=c++17 -fsycl-unnamed-lambda -sycl-std=2020 -fhonor-nans -fhonor-infinities -fno-associative-math -fno-approx-func -no-ftz -fsycl-targets=spir64_gen,spir64
Device Link Flags: -fsycl-max-parallel-link-jobs=4 --offload-compress -fsycl-targets=spir64_gen,spir64 -Xs '-device pvc,bmg,dg2,arl-h,mtl-h,lnl-m,ptl-h,ptl-u -options -cl-poison-unsupported-fp64-kernels -options -cl-intel-enable-auto-large-GRF-mode -options -cl-fp32-correctly-rounded-divide-sqrt -options -cl-intel-greater-than-4GB-buffer-required'
AOT Targets: pvc,bmg,dg2,arl-h,mtl-h,lnl-m,ptl-h,ptl-u

Step 1: Compiling source to object file...
/workspace/kernel_dataset/sycl/winograd_output_se_relu_input_kernel.dp.cpp:150:2: error: unterminated conditional directive
  150 | #ifndef SKIP_FP16_BITS
      |  ^
/workspace/kernel_dataset/sycl/winograd_output_se_relu_input_kernel.dp.cpp:284:21: error: expected '}'
  284 |       #pragma unroll
      |                     ^
/workspace/kernel_dataset/sycl/winograd_output_se_relu_input_kernel.dp.cpp:144:30: note: to match this '{'
  144 | struct OutputTransformKernel {
      |                              ^
/workspace/kernel_dataset/sycl/winograd_output_se_relu_input_kernel.dp.cpp:168:40: error: use of undeclared identifier 'GemmN'
  168 |         outElTransformed[y][x] = input[TEMP_INDEX_HWNC(y, x, shln, k)];
      |                                        ^
/workspace/kernel_dataset/sycl/winograd_output_se_relu_input_kernel.dp.cpp:123:12: note: expanded from macro 'TEMP_INDEX_HWNC'
  123 |   ((h)*6 * GemmN * C + (w)*GemmN * C + (n)*C + c)
      |            ^
/workspace/kernel_dataset/sycl/winograd_output_se_relu_input_kernel.dp.cpp:168:40: error: use of undeclared identifier 'GemmN'
/workspace/kernel_dataset/sycl/winograd_output_se_relu_input_kernel.dp.cpp:123:28: note: expanded from macro 'TEMP_INDEX_HWNC'
  123 |   ((h)*6 * GemmN * C + (w)*GemmN * C + (n)*C + c)
      |                            ^
/workspace/kernel_dataset/sycl/winograd_output_se_relu_input_kernel.dp.cpp:265:16: error: use of undeclared identifier 'GemmN'
  265 |         output[TEMP_INDEX_HWNC(y, x, n * 4 + 0, c)] = inEl[y][x];
      |                ^
/workspace/kernel_dataset/sycl/winograd_output_se_relu_input_kernel.dp.cpp:123:12: note: expanded from macro 'TEMP_INDEX_HWNC'
  123 |   ((h)*6 * GemmN * C + (w)*GemmN * C + (n)*C + c)
      |            ^
/workspace/kernel_dataset/sycl/winograd_output_se_relu_input_kernel.dp.cpp:265:16: error: use of undeclared identifier 'GemmN'
/workspace/kernel_dataset/sycl/winograd_output_se_relu_input_kernel.dp.cpp:123:28: note: expanded from macro 'TEMP_INDEX_HWNC'
  123 |   ((h)*6 * GemmN * C + (w)*GemmN * C + (n)*C + c)
      |                            ^
/workspace/kernel_dataset/sycl/winograd_output_se_relu_input_kernel.dp.cpp:279:16: error: use of undeclared identifier 'GemmN'
  279 |         output[TEMP_INDEX_HWNC(y, x, n * 4 + 1, c)] = inEl[y][x];
      |                ^
/workspace/kernel_dataset/sycl/winograd_output_se_relu_input_kernel.dp.cpp:123:12: note: expanded from macro 'TEMP_INDEX_HWNC'
  123 |   ((h)*6 * GemmN * C + (w)*GemmN * C + (n)*C + c)
      |            ^
/workspace/kernel_dataset/sycl/winograd_output_se_relu_input_kernel.dp.cpp:279:16: error: use of undeclared identifier 'GemmN'
/workspace/kernel_dataset/sycl/winograd_output_se_relu_input_kernel.dp.cpp:123:28: note: expanded from macro 'TEMP_INDEX_HWNC'
  123 |   ((h)*6 * GemmN * C + (w)*GemmN * C + (n)*C + c)
      |                            ^
/workspace/kernel_dataset/sycl/winograd_output_se_relu_input_kernel.dp.cpp:284:15: error: expected expression
  284 |       #pragma unroll
      |               ^
/workspace/kernel_dataset/sycl/winograd_output_se_relu_input_kernel.dp.cpp:284:15: error: expected '}'
/workspace/kernel_dataset/sycl/winograd_output_se_relu_input_kernel.dp.cpp:282:5: note: to match this '{'
  282 |     {
      |     ^
/workspace/kernel_dataset/sycl/winograd_output_se_relu_input_kernel.dp.cpp:284:15: error: expected '}'
  284 |       #pragma unroll
      |               ^
/workspace/kernel_dataset/sycl/winograd_output_se_relu_input_kernel.dp.cpp:149:69: note: to match this '{'
  149 |                   sycl::local_accessor<float, 2> shared_sums) const {
      |                                                                     ^
/workspace/kernel_dataset/sycl/winograd_output_se_relu_input_kernel.dp.cpp:284:21: error: expected ';' after struct
  284 |       #pragma unroll
      |                     ^
      |                     ;
/workspace/kernel_dataset/sycl/winograd_output_se_relu_input_kernel.dp.cpp:284:21: error: expected '}'
/workspace/kernel_dataset/sycl/winograd_output_se_relu_input_kernel.dp.cpp:6:27: note: to match this '{'
    6 | namespace sycldnn_backend {
      |                           ^
/workspace/kernel_dataset/sycl/winograd_output_se_relu_input_kernel.dp.cpp:284:21: error: expected '}'
  284 |       #pragma unroll
      |                     ^
/workspace/kernel_dataset/sycl/winograd_output_se_relu_input_kernel.dp.cpp:5:18: note: to match this '{'
    5 | namespace lczero {
      |                  ^
14 errors generated.
[ERROR] Compilation step 1 failed with exit code 1

=== STDERR ===
+ echo '=== SYCL Compilation for Intel XPU (BMG Support) ==='
+ echo 'Timestamp: 20260308_084012'
+ echo 'Kernel: winograd_output_se_relu_input_kernel.dp'
+ echo 'Source: /workspace/kernel_dataset/sycl/winograd_output_se_relu_input_kernel.dp.cpp'
+ echo 'Compiler: icpx'
+ echo 'Compile Flags: -fsycl -O2 -std=c++17 -fsycl-unnamed-lambda -sycl-std=2020 -fhonor-nans -fhonor-infinities -fno-associative-math -fno-approx-func -no-ftz -fsycl-targets=spir64_gen,spir64'
+ echo 'Device Link Flags: -fsycl-max-parallel-link-jobs=4 --offload-compress -fsycl-targets=spir64_gen,spir64 -Xs '\''-device pvc,bmg,dg2,arl-h,mtl-h,lnl-m,ptl-h,ptl-u -options -cl-poison-unsupported-fp64-kernels -options -cl-intel-enable-auto-large-GRF-mode -options -cl-fp32-correctly-rounded-divide-sqrt -options -cl-intel-greater-than-4GB-buffer-required'\'''
+ echo 'AOT Targets: pvc,bmg,dg2,arl-h,mtl-h,lnl-m,ptl-h,ptl-u'
+ echo ''
+ '[' '!' -f /workspace/kernel_dataset/sycl/winograd_output_se_relu_input_kernel.dp.cpp ']'
+ mkdir -p /workspace/build_sycl
+ mkdir -p /workspace/results/b60
+ echo 'Step 1: Compiling source to object file...'
+ icpx -fsycl -O2 -std=c++17 -fsycl-unnamed-lambda -sycl-std=2020 -fhonor-nans -fhonor-infinities -fno-associative-math -fno-approx-func -no-ftz -fsycl-targets=spir64_gen,spir64 -c /workspace/kernel_dataset/sycl/winograd_output_se_relu_input_kernel.dp.cpp -o /workspace/build_sycl/winograd_output_se_relu_input_kernel.dp.o
+ tee /workspace/results/b60/compile_winograd_output_se_relu_input_kernel.dp_20260308_084012.log.step1
+ STEP1_EXIT=1
+ '[' 1 -ne 0 ']'
+ echo '[ERROR] Compilation step 1 failed with exit code 1'
+ exit 1
